# PandasSchemaster

./: .gitignore  CHANGELOG.md  README.md  generate_schema.py  pyproject.toml  sample_data.csv  setup.py
docs/: CLI_USAGE.md  PROJECT_STRUCTURE.md  SCHEMA_GENERATION.md
pandasschemaster/: __init__.py  base_schema.py  schema_column.py  schema_dataframe.py  schema_generator.py
scripts/: generate_schema_mcp_server.py
tests/: test_core.py  test_inheritance.py  test_schema_data_frame.py
