[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasschemaster"
dynamic = ["version"]
description = "Type-safe DataFrame library with schema validation for pandas"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pandas", "dataframe", "schema", "validation", "type-safety"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/PandasSchema"
Repository = "https://github.com/yourusername/PandasSchema"
Issues = "https://github.com/yourusername/PandasSchema/issues"

[tool.setuptools]
packages = ["pandasschemaster"]

[tool.setuptools_scm]
write_to = "pandasschemaster/_version.py"
